Fix Z-Index of custom-modal

--- a/assets/bonus.css
+++ b/assets/bonus.css
@@ -72,7 +72,7 @@
 
 .custom-modal {
   position: fixed;
-  z-index: 4;
+  z-index: 20;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
